--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>DB | Github Page</title>
+    </head>
+    <body>
+        <h1>Hello Github Pages</h1>
+    </body>
+</html>
