First, try @GithubPages.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <title>DB | Github Page</title>
+        <meta charset="utf-8">
+        <title>Hello</title>
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="assets/css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="favicon.png">
+        <script src="assets/js/main.js"></script>
     </head>
     <body>
-        <h1>Hello Github Pages</h1>
+        <h1>First, try @GithubPages.</h1>
     </body>
 </html>
