--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Hello</title>
+        <title>Rocket</title>
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="assets/css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
