Hrefs to two different GH Repos

--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Hello</title>
-        <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="assets/css/styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link rel="icon" type="image/x-icon" href="favicon.png">
-        <script src="assets/js/main.js"></script>
-    </head>
-    <body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Rocket</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <script src="assets/js/main.js"></script>
+</head>
+
+<body>
+    <div id="wrapper">
         <h1>First, try @GithubPages.</h1>
-    </body>
+        <br>
+        <nav>
+            <ul>
+                <li>
+                    <a href="GH-Page1">GH Repo1</a>
+                </li>
+                <li>
+                    <a href="GH-Page2">GH Repo2</a>
+                </li>
+            </ul>
+        </nav>
+
+    </div>
+</body>
+
 </html>
