Internal Page link added

--- a/Page3.html
+++ b/Page3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Rocket</title>
+    <title>Page3</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -13,22 +13,7 @@
 
 <body>
     <div id="wrapper">
-        <h1>First, try @GithubPages.</h1>
-        <br>
-        <nav>
-            <ul>
-                <li>
-                    <a href="GH-Page1">GH Repo1</a>
-                </li>
-                <li>
-                    <a href="GH-Page2">GH Repo2</a>
-                </li>
-                <li>
-                    <a href="Page3">Page 3</a>
-                </li>
-            </ul>
-        </nav>
-
+        <h1>Page3 @GithubPages.</h1>
     </div>
 </body>
 
