--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="wrapper">
+    <!-- <div id="wrapper">
         <h1>First, try @GithubPages.</h1>
         <br>
         <nav>
@@ -29,7 +29,7 @@
             </ul>
         </nav>
 
-    </div>
+    </div> -->
 </body>
 
 </html>
