--- a/index.html
+++ b/index.html
@@ -1,35 +1,180 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Rocket</title>
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
     <script src="assets/js/main.js"></script>
-</head>
+  </head>
 
-<body>
-    <!-- <div id="wrapper">
-        <h1>First, try @GithubPages.</h1>
-        <br>
-        <nav>
-            <ul>
-                <li>
-                    <a href="GH-Page1">GH Repo1</a>
-                </li>
-                <li>
-                    <a href="GH-Page2">GH Repo2</a>
-                </li>
-                <li>
-                    <a href="Page3">Page 3</a>
-                </li>
-            </ul>
-        </nav>
+  <body>
+    <div id="wrapper">
+      <svg
+        id="logo"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 490.831 203"
+      >
+        <g transform="translate(-60.546 -219)">
+          <text
+            transform="translate(112.377 260)"
+            fill="#fff"
+            font-size="126"
+            font-family="Roboto-Bold, Roboto"
+            font-weight="700"
+          >
+            <tspan x="0" y="120">Curious</tspan>
+          </text>
+          <text
+            transform="translate(402.377 219)"
+            fill="#cecece"
+            font-size="75"
+            font-family="Roboto-Bold, Roboto"
+            font-weight="700"
+          >
+            <tspan x="0" y="71">NOT</tspan>
+          </text>
+          <path
+            d="M40,161.947H17.472L14.28,54.039H43.2Zm-26.381,33.26a19.1,19.1,0,0,1,1.08-6.524,15.545,15.545,0,0,1,3.051-5.187,13.858,13.858,0,0,1,4.741-3.422,15.226,15.226,0,0,1,6.243-1.23,15.558,15.558,0,0,1,6.29,1.23,13.747,13.747,0,0,1,4.788,3.422,15.545,15.545,0,0,1,3.051,5.187,19.1,19.1,0,0,1,1.08,6.524,18.648,18.648,0,0,1-1.08,6.47,15.656,15.656,0,0,1-3.051,5.133,13.747,13.747,0,0,1-4.788,3.422,15.558,15.558,0,0,1-6.29,1.23,15.226,15.226,0,0,1-6.243-1.23,13.858,13.858,0,0,1-4.741-3.422,15.656,15.656,0,0,1-3.051-5.133A18.648,18.648,0,0,1,13.623,195.207Z"
+            transform="matrix(0.998, -0.07, 0.07, 0.998, 43.187, 172.331)"
+            fill="#5d5d5d"
+          />
+          <rect
+            width="479"
+            height="10"
+            transform="translate(72 412)"
+            fill="#4b4848"
+          />
+        </g>
+      </svg>
 
-    </div> -->
-</body>
+      <code>{ 503 Under Maintanence }</code>
 
+      <ul>
+        <li>
+          <a
+            href="https://github.com/DivyanshBatham"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <?xml version="1.0" encoding="iso-8859-1"?>
+            <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+            <svg
+              version="1.1"
+              id="Capa_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              x="0px"
+              y="0px"
+              viewBox="0 0 438.549 438.549"
+              style="enable-background:new 0 0 438.549 438.549;"
+              xml:space="preserve"
+            >
+              <g>
+                <path
+                  d="M409.132,114.573c-19.608-33.596-46.205-60.194-79.798-79.8C295.736,15.166,259.057,5.365,219.271,5.365
+                c-39.781,0-76.472,9.804-110.063,29.408c-33.596,19.605-60.192,46.204-79.8,79.8C9.803,148.168,0,184.854,0,224.63
+                        c0,47.78,13.94,90.745,41.827,128.906c27.884,38.164,63.906,64.572,108.063,79.227c5.14,0.954,8.945,0.283,11.419-1.996
+                        c2.475-2.282,3.711-5.14,3.711-8.562c0-0.571-0.049-5.708-0.144-15.417c-0.098-9.709-0.144-18.179-0.144-25.406l-6.567,1.136
+                        c-4.187,0.767-9.469,1.092-15.846,1c-6.374-0.089-12.991-0.757-19.842-1.999c-6.854-1.231-13.229-4.086-19.13-8.559
+                        c-5.898-4.473-10.085-10.328-12.56-17.556l-2.855-6.57c-1.903-4.374-4.899-9.233-8.992-14.559
+                        c-4.093-5.331-8.232-8.945-12.419-10.848l-1.999-1.431c-1.332-0.951-2.568-2.098-3.711-3.429c-1.142-1.331-1.997-2.663-2.568-3.997
+                        c-0.572-1.335-0.098-2.43,1.427-3.289c1.525-0.859,4.281-1.276,8.28-1.276l5.708,0.853c3.807,0.763,8.516,3.042,14.133,6.851
+                        c5.614,3.806,10.229,8.754,13.846,14.842c4.38,7.806,9.657,13.754,15.846,17.847c6.184,4.093,12.419,6.136,18.699,6.136
+                        c6.28,0,11.704-0.476,16.274-1.423c4.565-0.952,8.848-2.383,12.847-4.285c1.713-12.758,6.377-22.559,13.988-29.41
+                        c-10.848-1.14-20.601-2.857-29.264-5.14c-8.658-2.286-17.605-5.996-26.835-11.14c-9.235-5.137-16.896-11.516-22.985-19.126
+                        c-6.09-7.614-11.088-17.61-14.987-29.979c-3.901-12.374-5.852-26.648-5.852-42.826c0-23.035,7.52-42.637,22.557-58.817
+                        c-7.044-17.318-6.379-36.732,1.997-58.24c5.52-1.715,13.706-0.428,24.554,3.853c10.85,4.283,18.794,7.952,23.84,10.994
+                        c5.046,3.041,9.089,5.618,12.135,7.708c17.705-4.947,35.976-7.421,54.818-7.421s37.117,2.474,54.823,7.421l10.849-6.849
+                        c7.419-4.57,16.18-8.758,26.262-12.565c10.088-3.805,17.802-4.853,23.134-3.138c8.562,21.509,9.325,40.922,2.279,58.24
+                        c15.036,16.18,22.559,35.787,22.559,58.817c0,16.178-1.958,30.497-5.853,42.966c-3.9,12.471-8.941,22.457-15.125,29.979
+                        c-6.191,7.521-13.901,13.85-23.131,18.986c-9.232,5.14-18.182,8.85-26.84,11.136c-8.662,2.286-18.415,4.004-29.263,5.146
+                        c9.894,8.562,14.842,22.077,14.842,40.539v60.237c0,3.422,1.19,6.279,3.572,8.562c2.379,2.279,6.136,2.95,11.276,1.995
+                        c44.163-14.653,80.185-41.062,108.068-79.226c27.88-38.161,41.825-81.126,41.825-128.906
+                        C438.536,184.851,428.728,148.168,409.132,114.573z"
+                />
+              </g>
+            </svg>
+            <span>Github</span>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://linkedin.com/in/divyanshbatham/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <?xml version="1.0" encoding="iso-8859-1"?>
+            <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+            <svg
+              version="1.1"
+              id="Capa_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              x="0px"
+              y="0px"
+              viewBox="0 0 430.117 430.118"
+              style="enable-background:new 0 0 430.117 430.118;"
+              xml:space="preserve"
+            >
+              <g>
+                <path
+                  id="LinkedIn__x28_alt_x29_"
+                  d="M398.355,0H31.782C14.229,0,0.002,13.793,0.002,30.817v368.471
+                c0,17.025,14.232,30.83,31.78,30.83h366.573c17.549,0,31.76-13.814,31.76-30.83V30.817C430.115,13.798,415.904,0,398.355,0z
+                M130.4,360.038H65.413V165.845H130.4V360.038z M97.913,139.315h-0.437c-21.793,0-35.92-14.904-35.92-33.563
+                        c0-19.035,14.542-33.535,36.767-33.535c22.227,0,35.899,14.496,36.331,33.535C134.654,124.415,120.555,139.315,97.913,139.315z
+                         M364.659,360.038h-64.966V256.138c0-26.107-9.413-43.921-32.907-43.921c-17.973,0-28.642,12.018-33.327,23.621
+                         c-1.736,4.144-2.166,9.94-2.166,15.728v108.468h-64.954c0,0,0.85-175.979,0-194.192h64.964v27.531
+                         c8.624-13.229,24.035-32.1,58.534-32.1c42.76,0,74.822,27.739,74.822,87.414V360.038z M230.883,193.99
+                         c0.111-0.182,0.266-0.401,0.42-0.614v0.614H230.883z"
+                />
+              </g>
+            </svg>
+
+            <span>Linkedin</span>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://codepen.io/NotNotCurious/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <?xml version="1.0" encoding="iso-8859-1"?>
+            <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+            <svg
+              version="1.1"
+              id="Capa_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              x="0px"
+              y="0px"
+              viewBox="0 0 31.665 31.665"
+              style="enable-background:new 0 0 31.665 31.665;"
+              xml:space="preserve"
+            >
+              <g>
+                <path
+                  d="M16.878,0.415c-0.854-0.565-1.968-0.552-2.809,0.034L1.485,9.214c-0.671,0.468-1.071,1.233-1.071,2.052v9.444
+                        c0,0.84,0.421,1.623,1.122,2.086l12.79,8.455c0.836,0.553,1.922,0.553,2.758,0l13.044-8.618c0.7-0.463,1.122-1.246,1.122-2.086
+                        v-9.279c0-0.839-0.421-1.622-1.121-2.085L16.878,0.415z M26.621,10.645l-4.821,3.237l-4.521-3.288L17.25,4.127L26.621,10.645z
+                        M13.979,4.133v6.329l-4.633,3.24l-4.621-3.099L13.979,4.133z M3.458,13.722l2.991,2.004l-2.991,2.093V13.722z M14.058,27.215
+                        l-9.331-6.258l4.661-3.258l4.67,3.133V27.215z M12.286,15.674l3.021-2.113l3.519,2.313l-3.119,2.095L12.286,15.674z M17.354,27.215
+                        V20.83l4.463-2.991l4.805,3.159L17.354,27.215z M27.954,17.927l-3.168-2.082l3.168-2.125V17.927z"
+                />
+              </g>
+            </svg>
+
+            <span>CodePen</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
