Updated favicon and title

--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Rocket</title>
+    <title>!NotCurious</title>
+    <!-- <title>!NotCurious | Projects</title> -->
+    <!-- <title>DivyanshBatham - !NotCurious</title> -->
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
+      rel="stylesheet"  
     />
-    <link rel="icon" type="image/x-icon" href="favicon.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png"  />
     <script src="assets/js/main.js"></script>
   </head>
 
